<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:keepScreenOn="false"
android:orientation="vertical">


    <Space
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="540"
        android:textSize="@dimen/sizeTextView" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_1"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_2"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_3"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/add_button"
        android:textSize="@dimen/text_button" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_4"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_5"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_6"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="reduce_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/reduce_button"
        android:textSize="@dimen/text_button" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_7"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_8"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_9"
        android:textSize="@dimen/text_button" />

    <Button
        android:id="multiply_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/multiply_button"
        android:textSize="@dimen/text_button" />

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--suppress AndroidDomInspection -->
    <Button
        android:id="@+id/dot_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/dot_button"
        android:textSize="@dimen/text_button"

        />

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:text="@string/_0"
        android:textSize="@dimen/text_button"

        />
    <!--suppress AndroidDomInspection -->
    <Button
        android:id="@+id/button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="C"
        android:textSize="@dimen/text_button"/>

    <Button
        android:id="@+id/divide_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/divide_button"
        android:textSize="@dimen/text_button" />

</LinearLayout>

<Space
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="0" />

</LinearLayout>


