<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0"
    android:paddingTop="0"
    android:paddingRight="0"
    android:paddingBottom="0">


    <TextView
        android:id="@+id/textView"
        android:layout_width="294dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:foregroundGravity="bottom"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button11"
        android:layout_width="102dp"
        android:layout_height="@dimen/button_height"
        android:background="background_button"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button12"
        android:layout_width="101dp"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="102dp"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button10"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="101dp"
        android:layout_height="@dimen/button_height"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        app:constraint_referenced_ids="button10, button11, button12, button_add"

        />


    <Button
        android:id="@+id/button14"
        android:layout_width="101dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/_4"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="102dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/_5"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="101dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/_6"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="102dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/reduce_button"
        tools:layout_editor_absoluteX="308dp"
        tools:layout_editor_absoluteY="419dp" />

